FIX (NONE) small style fixes that became visible when uploading content

--- a/source/_patterns/00-atoms/01-text/01-block-elements.scss
+++ b/source/_patterns/00-atoms/01-text/01-block-elements.scss
@@ -1,5 +1,6 @@
 p {
   @include font-secondary-medium-lowercase;
+  margin-bottom : $marginMini;
 }
 .pullQuote {
   @include font-secondary-medium-lowercase(1.5em);
