--- a/source/_patterns/01-molecules/02-blocks/01-block-media.scss
+++ b/source/_patterns/01-molecules/02-blocks/01-block-media.scss
@@ -1,4 +1,3 @@
-
 .blockMedia {
   text-align : center;
   display : flex;
@@ -29,8 +28,8 @@
 
     @media only screen and (min-width : $breakpointDesktop) {
       margin-top : 0;
-      display: inline-block;
       width: 49%;
+      min-height : 45em;
     }
 
     &--cropped {
